src/kube/sonar/sonar-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: sonar
  labels:
    name: sonar
