src/kube/sonar/pg-deploy.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "postgres"
  namespace: "sonar"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "postgres"
  template:
    metadata:
      labels:
        app: "postgres"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "kubernetes.io/arch"
                    operator: "In"
                    values:
                      - "amd64"
                      - "arm64"
      containers:
        - name: "postgres"
          image: "postgres:15.4"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: "postgres-mnt"
          resources:
            requests:
              cpu: "1"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "2048Mi"
      volumes:
        - name: "postgres-mnt"
          persistentVolumeClaim:
            claimName: "postgres-pvc"
      nodeSelector:
        kubernetes.io/os: "linux"
