src/kube/sonar/sq-deploy.yml
# https://hub.docker.com/_/sonarqube/
# https://serverfault.com/questions/956361/kubernetes-docker-and-vm-max-map-count
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar
  namespace: sonar
  labels:
    app: sonar
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: sonarqube
        image: sonarqube:10.2-community
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: sonar-mnt
          mountPath: "/opt/sonarqube/data/"
          subPath: data
        - name: sonar-mnt
          mountPath: "/opt/sonarqube/extensions/"
          subPath: extensions
        resources:
          requests:
            memory: "1024Mi"
          limits:
            cpu: "1"
            memory: "2048Mi"
      volumes:
      - name: sonar-mnt
        persistentVolumeClaim:
          claimName: sonar-pvc
      nodeSelector:
        kubernetes.io/os: linux
