src/kube/sonar/pg-service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "postgres"
  namespace: "sonar"
  labels:
    app: "postgres"
spec:
  type: "NodePort"
  ports:
    - port: 5432
      nodePort: 31032
  selector:
    app: "postgres"
