src/kube/sonar/sq-service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "sonar"
  namespace: "sonar"
  labels:
    app: "sonar"
spec:
  type: "NodePort"
  ports:
    - port: 9000
      nodePort: 31900
      name: "sonar"
  selector:
    app: "sonar"
