src/kube/sonar/sonarqube-ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url: "true"
  name: "sonar-ingress"
  namespace: "sonar"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "sonar.kube"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "sonarqube"
                port:
                  number: 9000
